--- a/src/projects.css
+++ b/src/projects.css
@@ -357,6 +357,7 @@
 
 /* Next Button Css */
 .btn-arrow {
+    z-index: 5;
     position: relative;
     top: -14rem;
     right: -4rem;
@@ -454,6 +455,7 @@
 
 
 .next-button {
+    z-index: 5;
     display: flex;
 }
 
